feat: UI overhaul with email functionality (#8)
* Event cards
* Update events from the event page
* Event page with ability to add/remove seating and guests
* Track seating summary
* Track guest referrals
* Email templating
* Send emails to guests

Co-authored-by: Joseph Muir <jgmuir@users.noreply.github.com>

--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -1,13 +1,14 @@
 <div id='users' data-controller='index update destroy'
     data-index-url-value='/api/v1/users' data-destroy-url-value='/api/v1/users' data-update-url-value='/api/v1/users'
-    data-index-offset-value=0 data-index-limit-value=10>
+    data-index-offset-value=0 data-index-limit-value=10
+    data-action='update:updated->index#query destroy:deleted->index#query'>
   <template data-index-target='template'>
     <tr data-update-target='update'>
-      <td><input class='id' type='checkbox' name='id' data-destroy-target='destroy'></td>
-      <td class='name'><span class='first_name'></span> <span class='last_name'></span></td>
-      <td><input class='is_admin decor' type='checkbox' disabled>
-      <td class='email'></td>
-      <td class='created_at'></td>
+      <td><input data-nxt-id type='checkbox' name='id' data-destroy-target='destroy'></td>
+      <td class='name'><span data-nxt-first_name></span> <span data-nxt-last_name></span></td>
+      <td><input class='decor' data-nxt-is_admin type='checkbox' disabled>
+      <td data-nxt-email></td>
+      <td data-nxt-created_at></td>
     </tr>
   </template>
   <div class='d-flex justify-content-end'>
@@ -34,15 +35,15 @@
   </table>
   <div class='d-flex justify-content-between'>
     <div>
-      <button data-action='update#updateBatchFromCheckbox' data-update-payload-param='{"is_admin": true}'>Elevate</button>
-      <button data-action='update#updateBatchFromCheckbox' data-update-payload-param='{"is_admin": false}'>Demote</button>
-      <button data-action='click->destroy#destroy'>Deactivate</button>
+      <button class='btn-sm btn-primary' data-action='update#updateBatchFromCheckbox' data-update-payload-param='{"is_admin": true}'>Elevate</button>
+      <button class='btn-sm btn-primary' data-action='update#updateBatchFromCheckbox' data-update-payload-param='{"is_admin": false}'>Demote</button>
+      <button class='btn-sm btn-primary' data-action='click->destroy#destroy'>Deactivate</button>
     </div>
     <div>
-      <button><i class='bi bi-chevron-double-left'></i></button>
-      <button data-action='index#decrementOffset'><i class='bi bi-chevron-left'></i></button>
-      <button data-action='index#incrementOffset'><i class='bi bi-chevron-right'></i></button>
-      <button><i class='bi bi-chevron-double-right'></i></button>
+      <button class='btn-sm btn-primary'><i class='bi bi-chevron-double-left'></i></button>
+      <button class='btn-sm btn-primary' data-action='index#decrementOffset'><i class='bi bi-chevron-left'></i></button>
+      <button class='btn-sm btn-primary' data-action='index#incrementOffset'><i class='bi bi-chevron-right'></i></button>
+      <button class='btn-sm btn-primary'><i class='bi bi-chevron-double-right'></i></button>
     </div>
   </div>
 </div>
