--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,7 +1,11 @@
+<% content_for :nav do %>
+  <%= render 'layouts/nav' %>
+<% end %>
+
 <style>
     body {
     
-      background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url(https://www.teahub.io/photos/full/197-1977791_portland-wallpapers-hd-portland-oregon-city-view.jpg);
+      //background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url(https://www.teahub.io/photos/full/197-1977791_portland-wallpapers-hd-portland-oregon-city-view.jpg);
       background-repeat: no-repeat; 
       background-position: center;
       background-attachment: fixed; 
@@ -49,6 +53,21 @@
     border-radius: 10px;
     padding: 10px;
   }
+
+  #guest-list-table{
+    display: none;
+  }
+  table, th, td {
+    border: 1px solid black;
+  }
+  th, td {
+    padding: 5px;
+    #width: 209.8px;
+  }
+
+  th.value input{
+    width: 100%
+  }
 </style>
 
 <script>
@@ -66,6 +85,42 @@
   }
 }
 
+  function guest_table_toggle() {
+    var button_name = document.getElementById("guest-list-table-toggle");
+    var x = document.getElementById("guest-list-table");
+    if(button_name.innerHTML == "Guest-List Table") {
+      button_name.innerHTML = "Close Guest-List Table";
+      x.style.display = "block";
+    } else {
+      button_name.innerHTML = "Guest-List Table";
+      x.style.display = "none";
+    }
+  }
+
+  function referral_table_toggle() {
+    var button_name = document.getElementById("referral-table-toggle");
+    var x = document.getElementById("referral-table");
+    if(button_name.innerHTML == "Referral Table") {
+      button_name.innerHTML = "Close Referral Table";
+      x.style.display = "block";
+    } else {
+      button_name.innerHTML = "Referral Table";
+      x.style.display = "none";
+    }
+  }
+
+  function seating_table_toggle() {
+  var button_name = document.getElementById("seating-table-toggle");
+  var x = document.getElementById("seating-table");
+  if(button_name.innerHTML == "Seating Levels") {
+    button_name.innerHTML = "Close Seating Levels";
+    x.style.display = "block";
+  } else {
+    button_name.innerHTML = "Seating Levels";
+    x.style.display = "none";
+  }
+}
+
 function refresh() {
   // or $('#myform')[0] with jQuery
   $("#reward-msg").load(location.href + " #reward-msg");
@@ -73,34 +128,150 @@ function refresh() {
 }
 </script>
 
-<body>
-<section>
-<h2><%= @event.title %></h2>
+<h1><%= @event.title %></h1>
+<div id='event-summary' class='mb-4'>
+  <div class='d-flex justify-content-start'>
+    <% if @event.image.attached? %>
+    <img class='w-25 me-2' src='<%= url_for(@event.image) %>' alt='Event image'>
+    <% end %>
 
-<!--<h2>The Control Room</h2>-->
-<p>Event Date: <%=@event.datetime %></p> <!-- format this to look nicer -->
-<p>Address: <%=@event.address %></p> <!-- <p><b>Event Address: 1255 NW 9th Ave, Portland, OR 97209</b></p> Example of what addr should look like--> 
-<p>Description: <%=@event.description %></p>
-<br><br>
-<%= button_to "Edit Event", edit_event_url(@event), :method => :get%>
-<%= button_to "Delete Event", @event, :method => :delete, data: {confirm: "Are you sure you want to delete this event?"} %>
-<br><br>
-<h1>Manage Guests</h1><br>
+    <div>
+      <p>Event Date: <%=@event.datetime %></p> <!-- format this to look nicer -->
+      <p>Address: <%=@event.address %></p> <!-- <p><b>Event Address: 1255 NW 9th Ave, Portland, OR 97209</b></p> Example of what addr should look like--> 
+      <p>Description: <%=@event.description %></p>
+    </div>
 
-<div id="form-div">
+    <div data-controller='update dynamic' data-update-url-value='/api/v1/events' data-action='update:updated->dynamic#reload'>
+      <%= render 'form' %>
+    </div>
+  </div>
+  <div class='d-flex mt-2'>
+    <button class='btn btn-primary me-2' data-bs-toggle="modal" data-bs-target="#event-modal">Edit Event</button>
+    <%= button_to "Delete Event", @event, :method => :delete, data: {confirm: "Are you sure you want to delete this event?"}, class: 'btn btn-danger' %>
+  </div>
+</div>
+
+<script>
+var eventModal = document.getElementById('event-modal')
+var updateButton = eventModal.querySelector('button[type="submit"]')
+eventModal.addEventListener('show.bs.modal', function (event) {
+  var button = event.relatedTarget
+  eventModal.querySelector('.modal-title').textContent = "Update Event"
+  eventModal.querySelector('button[type="submit"]').textContent = "Update"
+  eventModal.querySelector('input[data-nxt-id]').setAttribute('data-nxt-id', "<%= @event.id %>")
+  eventModal.querySelector('input[data-nxt-id]').value = "<%= @event.id %>"
+  eventModal.querySelector('#event-name').value = "<%= @event.title %>"
+  eventModal.querySelector('#event-address').value = "<%= @event.address %>"
+  eventModal.querySelector('#event-description').value = "<%= @event.description %>"
+  eventModal.querySelector('#event-datetime').value = (new Date("<%= @event.datetime.to_fs(:iso8601) %>")).toISOString().slice(0,16)
+})
+</script>
+
+<h2>Manage Seating Levels</h2>
+<div id="seating-table" class='mb-4'>
+  <table class="center">
+  <thead>
+    <th width=199.8>Category</th>
+    <th width=199.8>Total Count</th>
+  </thead>
+  <tbody>
+    <% @seats.each do |seat| %>
+      <tr>
+        <th width="199.8"><%= seat.category %></th>
+        <th width="199.8"><%= seat.total_count %></th>
+      </tr>
+    <% end %>
+  </tbody>
+  </table>
+  <div>
+    <form id='form-seat' class='mb-2' method="post" action="http://localhost:3000/events/<%= @event.id %>/seating_types">
+      <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
+      <table>
+        <tr>
+          <th>
+            <input type="text" name="category">
+          </th>
+          <th>
+            <input type="number" name="total_count">
+          </th>
+        </tr>
+      </table>
+    </form>
+    <button type="submit" value="submit" form='form-seat' class="btn btn-primary">Create Seating Type</button>
+  </div>
+</div>
+
+<h4> Seating Summary Information </h4>
+<div id='seating-summary' class='mb-4'>
+  <table class="center">
+    <tr>
+      <th width=199.8>Category</th>
+      <th width=199.8>Total Committed</th>
+      <th width=199.8>Total Allotted</th>
+      <th width=199.8>Remaining</th>
+      <th width=199.8>Total Booked</th>
+      <th width=199.8>Total Guests</th>
+      <th width=199.8>Balance</th>
+    </tr>
+    <tbody>
+      <% @res.each do |result| %>
+        <tr>
+          <th width=199.8><%= result.category %></th>
+          <th width=199.8><%= result.total_committed %></th>
+          <th width=199.8><%= result.total_allotted%></th>
+          <th width=199.8><%= result.remaining %></th>
+          <th width=199.8><%= result.total_booked %></th>
+          <th width=199.8><%= result.total_guests %></th>
+          <th width=199.8><%= result.balance %></th>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
+
+<!-- button to edit/add guests -->
+
+<h2>Manage Guests</h2>
+<div class='mb-4'>
+  <div class='d-flex justify-content-between'>
+    <div class='d-flex'>
+      <%= render 'email_template' %>
+      <span class='ms-2 me-2'></span>
+      <%= render 'email_modal' %>
+    </div>
+    <div>
+      <a href='/api/v1/events/<%= @event_id %>/guests?download'><button class='btn btn-primary'>Export Guest List</button></a>
+    </div>
+  </div>
+  <%= render 'guest_list' %>
+</div>
+
+<h2>Manage Referrals</h2>
+<%= render 'referral_table' %>
+
+<script>
+var emailModal = document.getElementById('email-modal')
+emailModal.addEventListener('show.bs.modal', function (event) {
+  var button = event.relatedTarget
+  var recipient = button.getAttribute('data-nxt-email')
+  var modalInput = emailModal.querySelector('#email-to')
+  modalInput.value = recipient
+})
+</script>
+
+<!--<div id="form-div">
 <h3>Import Box Office Data</h3>
 <%= form_tag import_new_spreadsheet_path, multipart: true  do %> 
   <div style="text-align: center;">
     <br>
     <%= label_tag(:file, "Accepted types: .xlsx") %><br>
-    <%= file_field_tag(:file, :id => "file-button") %><br><br>
+    <%= file_field_tag(:file, :id => "file-button", required: true) %><br><br>
     <%= submit_tag("Import Latest Box Office Data", :class => "button") %>
   </div>
 <% end %>
-</div>
-<br><br><br>
+</div> -->
 
-<h1 class="display-6" style="text-align: center; color: gray;"> Referral Rewards </h1><br><br>
+<h4 class="display-10" style="text-align: center; color: gray;"> Referral Rewards </h1><br><br>
 <div id="referral">
   <div style="text-align: center;" id="center-referral-button">
     <button type="button" id="referral-prepper" class="btn btn-success btn-rounded" onclick="toggle_referral()">Open Referral Reward Template</button>
@@ -124,7 +295,7 @@ function refresh() {
     <%= submit_tag "Save Changes", :id => "thisone", :class => "btn btn-success btn-rounded" %>
     <% end %>
        
-       <br>
+      <br>
         <%= button_tag "Preview Changes", :id => "thisone", :type => "button", :class => "btn btn-success btn-rounded", :onclick => "refresh()" %>
       <br>
 
@@ -134,11 +305,4 @@ function refresh() {
 
 </div>
 
-<%= link_to "Back", root_path, class:"btn btn-primary" %><br><br> <!-- question if/what this should change to -->
-
-
-
-
-
-</section>
-</body>
+<%= link_to "Back", '/events', class:"btn btn-primary" %><br><br> <!-- question if/what this should change to -->
