--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,52 +6,18 @@
   <%= stylesheet_link_tag    'application', media: 'all' %>
   <%= javascript_importmap_tags %>
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD15UtHa0mICshgHLTfDPXj8IUCpTCB7MY&libraries=places&callback=initMap" data-turbolinks-eval="false"></script> <!-- GMAP API -->
+  <script>window.process = { env: {} }</script>
 </head>
 <body>
   <iframe name="dummyframe" id="dummyframe" style="display: none;"></iframe>
 
-  <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e6ccff;">
+  <nav class="nav navbar navbar-expand-lg navbar-light justify-content-between" style="background-color: #e6ccff;">
     <h1 class="title">EVENTNXT</h1>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-
-      
-      <%if user_signed_in? %>
-        <li class="nav-item">
-          <%= link_to "Dashboard" , root_path, class: "nav-link"%>
-          
-        </li>
-        <li class="nav-item">
-          <%= link_to "Sign Out" , destroy_user_session_path, method: :delete, class: "nav-link"%>
-        </li>
-        <li class="nav-item">
-          <%= link_to " Edit Profile" , edit_user_registration_path, class: "nav-link"%>
-        </li>
-        <!-- work to get this to only show up on the main page for now is always on top bar -->
-        <%= button_to "Create Event", events_create_event_path, :method => "get", class: "btn btn-success btn-rounded"%>
-
-      <%else %>  
-        
-        
-        <li class="nav-item">
-          <%= link_to "Sign Up" , new_user_registration_path, class: "nav-link"%>
-        </li>
-        <li class="nav-item">
-          <%= link_to "Sign In" , new_user_session_path, class: "nav-link"%>
-        </li>
-      <%end %>
-
-
-
-    </ul>
-  </div>
-</nav>
+    <%= yield :nav %>
+  </nav>
 
   
-  <main class='d-flex justify-content-center vh-100'>
+  <main class='d-flex m-auto flex-column w-75'>
     <%# Render "flash" messages in our application. This loads _flash.erb %>
     <%# <%= render 'layouts/flash' %>
     <%= yield %>
