--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,6 +1,6 @@
 <h1>New Event</h1>
 
-<form method='post' action='http://localhost:3000/events/show'>
+<form method='post' action='/events/show'>
     <input type='number' id='user_id' name='user_id'>
     <input type='text' id='title' name='title'>
     <input type='text' id='address' name='address'>
