--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -184,7 +184,7 @@ eventModal.addEventListener('show.bs.modal', function (event) {
   </tbody>
   </table>
   <div>
-    <form id='form-seat' class='mb-2' method="post" action="http://localhost:3000/events/<%= @event.id %>/seating_types">
+    <form id='form-seat' class='mb-2' method="post" action="/events/<%= @event.id %>/seating_types">
       <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
       <table>
         <tr>
