--- a/app/views/guests/new.html.erb
+++ b/app/views/guests/new.html.erb
@@ -120,7 +120,7 @@ form{
 
 <!-- this is the basic code to add guests directly though other way looks fine, this is option like Seating Types table -->
 <div>
-      <form method="post" action="http://localhost:3000/events/<%= @event.id %>/guests">
+      <form method="post" action="/events/<%= @event.id %>/guests">
       <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
       <input type="hidden" id="event_id" name="event_id" value=<%= @event.id %>>
       <input type="hidden" id="added_by" name="added_by" value=<%= @event.user_id %>>
