Heroku setup, itr reports, bulk mail and rsvp mail

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -238,6 +238,8 @@ eventModal.addEventListener('show.bs.modal', function (event) {
       <%= render 'email_template' %>
       <span class='ms-2 me-2'></span>
       <%= render 'email_modal' %>
+      <span class='ms-2 me-2'></span>
+      <%= render 'bulk_email' %>
     </div>
     <div>
       <a href='/api/v1/events/<%= @event_id %>/guests?download'><button class='btn btn-primary'>Export Guest List</button></a>
@@ -257,6 +259,21 @@ emailModal.addEventListener('show.bs.modal', function (event) {
   var modalInput = emailModal.querySelector('#email-to')
   modalInput.value = recipient
 })
+
+var bulkEmailModal = document.getElementById('bulk-email')
+    bulkEmailModal.addEventListener('show.bs.modal', function () {
+      var forms = document.querySelectorAll("[name=guest_display]");
+      var recipients = "";
+
+       for (var i=0, n=forms.length;i<n;i++) {
+        if (forms[i].elements['guest_selector'].checked) {
+          recipients += forms[i].elements['guest_email'].value+";"
+        }
+       }
+    var bulkModal = document.getElementById('bulk-email')
+    var modalInput = bulkModal.querySelector('#email-to')
+    modalInput.value = recipients
+    })
 </script>
 
 <!--<div id="form-div">
