Updating script ends

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -259,7 +259,9 @@ emailModal.addEventListener('show.bs.modal', function (event) {
   var modalInput = emailModal.querySelector('#email-to')
   modalInput.value = recipient
 })
+</script>
 
+<script>
 var bulkEmailModal = document.getElementById('bulk-email')
     bulkEmailModal.addEventListener('show.bs.modal', function () {
       var forms = document.querySelectorAll("[name=guest_display]");
