--- a/app/views/guest_mailer/rsvp_invitation_email.html
+++ b/app/views/guest_mailer/rsvp_invitation_email.html
@@ -3,26 +3,96 @@
   <head>
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
-  <body>
-
-    <p>Hi {{guest.first_name}} {{guest.last_name}},</p>
-    <p>
-      Congratulations! You're invited by {{sender.first_name}} {{sender.last_name}} to an event.
-    </p>
-    <div class="ticket">
-        <h2>Event Title: {{event.title}}</h2>
-        <!--<div id="img"><img src='{{event.image.url}}'></div>-->
-        <p><b>Guest Name: {{guest.first_name}} {{guest.last_name}}</b></p>
-        <p><b>Event date: {{event.datetime}}</b></p>
-        {{#seats}}
-        <p><b>Seat Category: {{category}}</b> <b>Amount: {{allotted}}</b></p>
-        {{/seats}}
-        <p><strong>About Event:</strong> {{event.description}}</p>
-        <br><br><br>
-        <p><a href='{{rsvp_url}}'>RSVP</a></p>
-        <br><br><br><br>
-    </div>  
-    <p>Thank you and have a great day!</p><br>
-    <h2 style="color: white; background-color: lightblue; padding: 15px">EVENTNXT Team</h2>
+  <body style=" background-image: url(https://www.pngitem.com/pimgs/m/219-2194844_fashion-design-designer-clothing-drawing-hq-image-free.png); background-size: 1300px 1300px; background-repeat: no-repeat">
+    <table align="center" border="0" cellpadding="0" cellspacing="0"
+           width="1200" style="border:2px solid black">
+        <tbody>
+            <tr>
+                <td align="center">
+                    <table align="center" border="0" cellpadding="0"
+                           cellspacing="0" class="col-550" width="1200">
+                        <tbody>
+                            <tr>
+                                <td align="center" style="background-color: #ECC5C0;
+                                           height: 50px;">
+   
+                                    <a href="#" style="text-decoration: none;">
+                                        <p style="color:white;
+                                                  font-weight:bold; font-size: 22px">
+                                            FASHIONNXT
+                                        </p>
+                                    </a>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </td>
+            </tr>
+            <tr style="height: 100px;">
+                <td align="left" style="border: none;
+                          
+                           padding-right: 80px;padding-left:60px">
+   
+                    <p style="font-weight: bolder;font-size: 32px; font-family: Comic Sans MS, Comic Sans, cursive;
+                              letter-spacing: 0.025em;
+                              color:black;">
+                         You are invited to <p style="color: palevioletred;font-size: 32px"><strong>{{event.title}}</strong>
+                        
+                    </p>
+                </td>
+            </tr>
+   
+            <tr style="display: inline-block;">
+                <td style="height: 100px;
+                           padding: 40px;
+                           border: none;">
+                     
+                    <p class="data"
+                       style="text-align: justify-all;
+                              align-items: center; 
+                              font-size: 15px;
+                              font-family: Comic Sans MS, Comic Sans, cursive;
+                              padding-bottom: 12px;
+                              color: black">
+                      Hi {{guest.first_name}} {{guest.last_name}},
+                      <br>
+                      <br>FASHIONNXT
+                    <br>Invites you for {{event.title}}.</br>
+                    <br>
+                    <br>TO FOLLOW</br>
+                    </p>
+                    <div class="ticket">
+                      <div id="img"><img src='{{event.image.url}}' alt='Event image' title='Event Image' style="max-width: 100%;  
+                        height: auto; width: auto"></div>
+                      <p><b><strong>Event date: </strong>{{event.datetime}}</b></p>
+                      {{#seats}}
+                      <p><b><strong>Seat Category:</strong>{{category}}</b></p>
+                      {{/seats}}
+                      <p><strong>Number of Tickets:</strong> {{event.tickets.to_s}}</p>
+                      <p><strong>About Event:</strong> {{event.description}}</p>
+                      <p><strong>{{event.address}}</p>
+                      
+                      
+                  </div>  
+                    <p>
+                      <br>
+                        <a href='{{rsvp_url}}'
+                           style="text-decoration: none; 
+                                  color:black; 
+                                  border: 2px solid #b94c4c; 
+                                  padding: 10px 30px;
+                                  font-weight: bold;"> 
+                           RSVP 
+                      </a>
+                    </p>
+                    <p style="color: black; font-family: Comic Sans MS, Comic Sans, cursive; font-size: 15px;">
+                      <br>
+                      Looking forward to seeing you there!
+                    </p>
+                </td>
+            </tr>
+         
+                 
+      
   </body>
 </html>
