Adding tables for storing box office data

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -247,6 +247,9 @@ eventModal.addEventListener('show.bs.modal', function (event) {
   <%= render 'guest_list' %>
 </div>
 
+<h2>Manage Box Office Sales</h2>
+<%= render 'box_office_data' %>
+
 <h2>Manage Referrals</h2>
 <%= render 'referral_table' %>
 
