Persist sales data and display it on UI

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -248,7 +248,9 @@ eventModal.addEventListener('show.bs.modal', function (event) {
 </div>
 
 <h2>Manage Box Office Sales</h2>
-<%= render 'box_office_data' %>
+<div class='mb-4'>
+  <%= render 'box_office_data' %>
+</div>
 
 <h2>Manage Referrals</h2>
 <%= render 'referral_table' %>
