--- a/app/views/events/_box_office_data.html.erb
+++ b/app/views/events/_box_office_data.html.erb
@@ -1,33 +1,15 @@
-<div id='guests' data-controller='guest update destroy'
-    data-guest-url-value="/api/v1/events/<%= @event_id %>/guests"
-    data-guest-seaturl-value="/api/v1/events/<%= @event_id %>/seats"
-    data-update-url-value="/api/v1/events/<%= @event_id %>/guests"
-    data-destroy-url-value="/api/v1/events/<%= @event_id %>/guests"
-    data-guest-offset-value=0 data-guest-limit-value=25
-    data-action='update:created->guest#query update:created->guest#resetAddGuest destroy:deleted->guest#query'>
-  <template id='seat_levels'>
-    <select data-guest-target='seat'></select>
-  </template>
-  <template id='allotments'>
-    <div>
-      <select class='seat_id guest-seat-alloc'></select>
-      <input class='allotted' type='number'>
-      <span class='committed'></span>
-    </div>
-  </template>
-  <template data-guest-target='template'>
-    <form class='row' data-guest-target='form' data-action='change->guest#updateForm' name='guest_display'>
-      <div class='col-md-auto'><input class='form-check-input' type='checkbox' name='guest_selector' data-nxt-id data-destroy-target='destroy' data-update-target='update'></div>
-      <div class='col-md-1'><span data-nxt-first_name></span> <span data-nxt-last_name></span></div>
-      <div class='col-md-2'><input name="guest_email" type="text" data-nxt-email disabled></div>
-      <div class='col-md-1'><select class='form-select form-select-sm' name='seat_id' data-nxt-category data-guest-target='seat'></select></div>
-      <div class='col-md-1'><input class='form-control' type='number' name='allotted' min=0 data-nxt-allotted disabled></div>
-      <div class='col-md-1'>
-        <i class='bi bi-calendar-event' data-nxt-invite_expiration data-guest-target='tooltip'></i>
-        <i class='bi bi-envelope' data-nxt-emailed_at data-guest-target='tooltip'></i>
-        <i class='bi bi-bookmark-check-fill' data-nxt-booked></i>
-      </div>
-      <div class='col-md-1'><input type='checkbox' name='checked' data-nxt-checked></div>
+<div id='sale_tickets' data-controller='boxoffice update'
+    data-boxoffice-url-value="/api/v1/events/<%= @event_id %>/sale_tickets"
+    data-update-url-value="/api/v1/events/<%= @event_id %>/sale_tickets"
+    data-boxoffice-offset-value=0 data-boxoffice-limit-value=25
+    data-action='update:created->boxoffice#query'> 
+  <template data-boxoffice-target='template'>
+    <form class='row' data-boxoffice-target='form' data-action='change->boxoffice#updateForm' name='boxoffice_display'>
+      <div class='col-md-auto'><input class='form-check-input' type='checkbox' name='boxoffice_selector' data-nxt-id data-update-target='update'></div>
+      <div class='col-md-3'><span data-nxt-first_name></span> <span data-nxt-last_name></span></div>
+      <div class='col-md-3'><span name="boxoffice_email" data-nxt-email disabled></div>
+      <div class='col-md-1'><span name="seat_section" data-nxt-seat_section disabled></div>
+      <div class='col-md-1'><span name="tickets" data-nxt-tickets disabled></div>
       <div class='col-md-2'>
         <div class="dropdown">
           <button class='btn btn-secondary dropdown-toggle' type='button'
@@ -40,36 +22,27 @@
             <li><button class='text-danger dropdown-item dropdown-delete-item' type='button' data-nxt-id data-action='destroy#destroyByValue'>Delete</button></li>
           </ul>
         </div>
-      </div>
     </form>
   </template>
-  <div class="container border-bottom border-dark" data-guest-target='dom'>
-    <div class='row align-items-end mb-4 border-bottom border-dark'>
-      <div class='col-md-auto'><input class='form-check-input' type='checkbox' name='selectAll' onClick="toggle(this)"></div>
-      <div class='col-md-1'><span data-bs-toggle='tooltip' data-bs-placement='top' title='123'>Name</span></div>
-      <div class='col-md-2'>Email</div>
-      <div class='col-md-2'>
-        <div class='row'>
-          <div class='col-md text-center'>Allocation</div>
-        </div>
-        <div class='row'>
-          <div class='col-md text-center'>Seat Level</div>
-          <div class='col-md text-center'>Allotted</div>
-        </div>
-      </div>
-      <div class='col-md-1'>Status</div>
-      <div class='col-md-1'>Check-in</div>
+  <div class="containers border-bottom border-dark">
+    <div class='row align-items-end mb-4  border-dark'>
+    <div class='col-md-auto'><input class='form-check-input' type='checkbox' name='selectAll' onClick="toggle(this)"></div>
+      <div class='col-md-3'><span data-bs-toggle='tooltip' data-bs-placement='top'>Name</span></div>
+      <div class='col-md-3'>Email</div>
+      <div class='col-md-1'>Seat Level</div>
+      <div class='col-md-1'>Number of Tickets</div>
       <div class='col-md-2'></div>
     </div>
   </div>
-   <button type="button" class="btn btn-primary" data-bs-target="#bulk-email" data-action='boxoffice#loadData'>
-    Load Box Office Data
-  </button>
+  <div class="containers border-bottom border-dark" data-boxoffice-target='dom'>
+    <div class='row align-items-end mb-4 border-dark'>
+    </div>
+  </div>
 </div>
 
 <script>
 function toggle(source) {
-  checkboxes = document.getElementsByName('guest_selector');
+  checkboxes = document.getElementsByName('boxoffice_selector');
   for(var i=0, n=checkboxes.length;i<n;i++) {
     checkboxes[i].checked = source.checked;
   }
