updating rsvp email template

--- a/app/views/guest_mailer/rsvp_invitation_email.text.erb
+++ b/app/views/guest_mailer/rsvp_invitation_email.text.erb
@@ -5,8 +5,9 @@ Invites you for <%= @event.title %>
 TO FOLLOW
 <%= (@event.image) %>
 Event date: <%= @event.datetime %>
-Ticket Number: <%= nil %>
-Seat Category: <%= nil %>
+<%= @guest.seats.select(:category).distinct.each do |category| %>
+    Seat Category: <%= category %>
+  <% end %>
 <%= @event.address %>
 
 Please RSVP to confirm attendence with this link: <%= link_to 'RSVP', edit_event_guest_url(@event, @guest, :protocol => 'https') %>.
