--- a/app/views/events/_box_office_data.html.erb
+++ b/app/views/events/_box_office_data.html.erb
@@ -1,10 +1,66 @@
-<div id='sale_tickets' data-controller='boxoffice update'
+<div id='sale_tickets' data-controller='boxoffice update' data-boxoffice-eventid-value=<%= @event_id %>
     data-boxoffice-url-value="/api/v1/events/<%= @event_id %>/sale_tickets"
     data-update-url-value="/api/v1/events/<%= @event_id %>/sale_tickets"
     data-boxoffice-offset-value=0 data-boxoffice-limit-value=25
     data-action='update:created->boxoffice#query'> 
+  <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal-boxoffice">
+    Load Box Office Data
+  </button>
+  <div class='modal fade' id='modal-boxoffice' tabindex='-1'>
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="modal-boxoffice-title">Load Box Office Data</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <div class='flex-grow-1'>
+            <div class='form-floating mb-2'>
+              <input  class='form-control' type='number' id='header-line' name='header'>
+                <label for='header-line'>Header Row</label>
+                <button type="button" class="btn btn-primary" id='get-header' type='submit' form='form-boxoffice' 
+                  data-action='boxoffice#loadHeader'>Get Headers</button>
+            </div>
+            <div id="boxoffice-container-firstName">
+              <span>First Name</span>
+              <select class='form-select' id='boxoffice-firstName' name='firstName' 
+                data-load-boxoffice-target='select'></select>
+            </div>
+            <div id="boxoffice-container-lastName">
+              <span>Last Name</span>
+              <select class='form-select' id='boxoffice-lastName' name='lastName' 
+                data-load-boxoffice-target='select'></select>
+            </div>
+            <div id="boxoffice-container-email">
+              <span>Email</span>
+              <select class='form-select' id='boxoffice-email' name='Email' 
+                data-load-boxoffice-target='select'></select>
+            </div>
+            <div id="boxoffice-container-seatLevel">
+              <span>Seat Level</span>
+              <select class='form-select' id='boxoffice-seatLevel' name='Seat Level' 
+                data-load-boxoffice-target='select'></select>
+            </div>
+            <div id="boxoffice-container-seats">
+              <span>Number of Seats</span>
+              <select class='form-select' id='boxoffice-seats' name='seats' 
+                data-load-boxoffice-target='select'></select>
+            </div>
+          </div>
+        </div>
+        <div class="modal-footer d-flex justify-content-between">
+          <div>
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary" type='submit' form='form-boxoffice'
+                data-bs-dismiss="modal" data-action='boxoffice#loadData'>Load Data</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <template data-boxoffice-target='template'>
-    <form class='row' data-boxoffice-target='form' data-action='change->boxoffice#updateForm' name='boxoffice_display'>
+    <form class='row' data-boxoffice-target='form' data-action='change->boxoffice#boxoffice' name='boxoffice_display'>
       <div class='col-md-auto'><input class='form-check-input' type='checkbox' name='boxoffice_selector' data-nxt-id data-update-target='update'></div>
       <div class='col-md-3'><span data-nxt-first_name></span> <span data-nxt-last_name></span></div>
       <div class='col-md-3'><span name="boxoffice_email" data-nxt-email disabled></div>
@@ -47,4 +103,19 @@ function toggle(source) {
     checkboxes[i].checked = source.checked;
   }
 }
+</script>
+
+<script>
+    let input = document.querySelector("input#header-line");
+    let button = document.querySelector("button#get-header");
+    button.disabled = true;
+    input.addEventListener("change", stateHandle);
+
+    function stateHandle() {
+        if(document.querySelector("input#header-line").value === "") {
+            button.disabled = true;
+        } else {
+        button.disabled = false;
+        }
+    }
 </script>
