--- a/app/views/events/_guest_list.html.erb
+++ b/app/views/events/_guest_list.html.erb
@@ -47,7 +47,7 @@
   </template>
   <div class="container border-bottom border-dark" data-guest-target='dom'>
     <div class='row align-items-end mb-4 border-bottom border-dark'>
-      <div class='col-md-auto'><input class='form-check-input' type='checkbox' name='selectAll' onClick="toggle(this)"></div>
+      <div class='col-md-auto'><input class='form-check-input' type='checkbox' name='selectAllGuests' onClick="toggleGuests(this)"></div>
       <div class='col-md-1'><span data-bs-toggle='tooltip' data-bs-placement='top' title='123'>Name</span></div>
       <div class='col-md-2'>Email</div>
       <div class='col-md-1'>Affiliation</div>
@@ -98,7 +98,7 @@
 </div>
 
 <script>
-function toggle(source) {
+function toggleGuests(source) {
   checkboxes = document.getElementsByName('guest_selector');
   for(var i=0, n=checkboxes.length;i<n;i++) {
     checkboxes[i].checked = source.checked;
