--- a/app/views/guest_mailer/rsvp_confirmation_email.html.erb
+++ b/app/views/guest_mailer/rsvp_confirmation_email.html.erb
@@ -2,15 +2,66 @@
 <html>
   <head>
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
+        <style>
+    
+        .ticket {
+            text-align: center;
+            border: 3px solid black;
+            margin: 100px;
+        }
+        img {
+            position: relative;
+            background-repeat: no-repeat
+            text-align: center;
+            height: 300; 
+            max-width: 100%
+            display:block;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+            padding: 5px;
+            width: 4000px;
+        }
+        table {
+          border:2px solid black;
+        }
+        
+        rsvp-button {
+            -webkit-appearance: button;
+            -moz-appearance: button;
+            appearance: button;
+            text-decoration: none; 
+            color:black; 
+            border: 2px solid #b94c4c; 
+            padding: 10px 30px;
+            font-weight: bold;
+        }
+        
+    </style>
   </head>
   <body>
-    <h1>Your seat assignment has been confirmed.</h1>
-    <p><b>Name: <%= @guest.first_name %> <%= @guest.last_name %></b></p>
-    <p><b>Event title: <%= @event.title %></b></p>
-    <p><b>Event date: <%= @event.datetime %></b></p>
-    <%= @guest.seats.select(:category).distinct.each do |category| %>
-      <p><b>Seat Category: <%= category %></b></p>
-    <% end %>
-    <p>Thanks for joining and have a great day!</b></p>
+
+    <p>Hi <%= @guest.first_name %>,</p>
+    <br>
+    <br>FASHIONNXT
+    <br>Is expecting you for <%= @event.title %>.
+    <br>
+    <br>YOUR SEAT ASSIGNMENT HAS BEEN CONFIRMED.
+    </p>
+    <div class="ticket">
+        <img class='w-25 me-2' src='<%= url_for(@event.image) %>' alt='Event image' title='Event Image'>
+      
+      <p><b><strong>Name: </strong><%= @guest.first_name %> <%= @guest.last_name %></b></p>
+      <p><b><strong>Event title: </strong><%= @event.title %></b></p>
+      <p><b><strong>Event date: </strong><%= @event.datetime %></b></p>
+      <%= @guest.seats.select(:category).distinct.each do |category| %>
+      <p><b><strong>Seat Category: </strong><%= category %></b></p>
+      <% end %>
+        <p><strong>About Event: </strong><%= @event.description %></p>
+        <p><strong>Event address: </strong><%= @event.address %></p>
+
+
+        <br>
+    </div>  
+    <p>Looking forward to seeing you there!</p><br>
   </body>
 </html>
