--- a/app/views/events/_guest_list.html.erb
+++ b/app/views/events/_guest_list.html.erb
@@ -1,3 +1,10 @@
+<style>
+#guest-add-fn_1, #guest-add-ln_1{
+border:transparent;
+width:auto
+}
+</style>
+
 <div id='guests' data-controller='guest update destroy'
     data-guest-url-value="/api/v1/events/<%= @event_id %>/guests"
     data-guest-seaturl-value="/api/v1/events/<%= @event_id %>/seats"
