--- a/app/views/events/_guest_list.html.erb
+++ b/app/views/events/_guest_list.html.erb
@@ -32,7 +32,7 @@ width:auto
       <div class='col-md-1'><input class='form-control' type='text' name='affiliation' data-nxt-affiliation></p></div>
       <div class='col-md-1'><input class='form-control' type='text' name='perks' data-nxt-perks></p></div>
       <div class='col-md-1'><input class='form-control' type='text' name='comments' data-nxt-comments></p></div>
-      <div class='col-md-1'><p data-nxt-added_by></p></div>
+<!--       <div class='col-md-1'><p data-nxt-added_by></p></div> -->
       <div class='col-md-1'><select class='form-select form-select-sm' name='seat_id' data-nxt-category data-guest-target='seat'></select></div>
       <div class='col-md-1'><input class='form-control' type='number' name='allotted' min=0 data-nxt-allotted disabled></div>
       <div class='col-md-1'>
@@ -64,7 +64,7 @@ width:auto
       <div class='col-md-1'>Affiliation</div>
       <div class='col-md-1'>Perks</div>
       <div class='col-md-1'>Comments</div>
-      <div class='col-md-1'>Added By</div>
+<!--       <div class='col-md-1'>Added By</div> -->
       <div class='col-md-2'>
         <div class='row'>
           <div class='col-md text-center'>Allocation</div>
